--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/navigation_chat_list">
+    app:startDestination="@id/navigation_chat_room_list">
 
     <fragment
         android:id="@+id/navigation_signin"
@@ -75,10 +75,10 @@
 
 
     <fragment
-        android:id="@+id/navigation_chat_list"
-        android:name="com.sgs.devcamp2.flametalk_android.ui.chatlist.ChatListFragment"
-        android:label="Chatlist"
-        tools:layout="@layout/fragment_chat_list">
+        android:id="@+id/navigation_chat_room_list"
+        android:name="com.sgs.devcamp2.flametalk_android.ui.chatroomlist.ChatRoomListFragment"
+        android:label="ChatRoomlist"
+        tools:layout="@layout/fragment_chat_room_list">
         <action
             android:id="@+id/action_navigation_chat_to_chatRoomFragment"
             app:destination="@id/navigation_chat_room" />
@@ -92,8 +92,8 @@
         >
         <action
             android:id="@+id/action_chat_to_post"
-            app:destination="@id/navigation_chat_list"
-            app:popUpTo="@id/navigation_chat_list"/>
+            app:destination="@id/navigation_chat_room_list"
+            app:popUpTo="@id/navigation_chat_room_list"/>
     </fragment>
     <fragment
         android:id="@+id/navigation_chat_room"
@@ -103,6 +103,23 @@
         <action
             android:id="@+id/action_chatRoomFragment_to_navigation_oauth"
             app:destination="@id/navigation_oauth" />
+    </fragment>
+    <fragment
+        android:id="@+id/inviteRoomFragment"
+        android:name="com.sgs.devcamp2.flametalk_android.ui.inviteroom.InviteRoomFragment"
+        android:label="fragment_invite_room"
+        tools:layout="@layout/fragment_invite_room" >
+        <action
+            android:id="@+id/action_inviteRoomFragment_to_navigation_chat_room_list2"
+            app:destination="@id/navigation_chat_room_list" />
+    </fragment>
+    <fragment
+        android:id="@+id/chatRoomTopSheetFragment"
+        android:name="com.sgs.devcamp2.flametalk_android.ui.chatroomlist.ChatRoomTopSheetFragment"
+        android:label="ChatRoomTopSheetFragment" >
+        <action
+            android:id="@+id/action_chatRoomTopSheetFragment_to_inviteRoomFragment"
+            app:destination="@id/inviteRoomFragment" />
     </fragment>
 
 
