--- a/app/src/main/res/layout/fragment_chat_room_list_top_sheet.xml
+++ b/app/src/main/res/layout/fragment_chat_room_list_top_sheet.xml
@@ -48,7 +48,7 @@
             >
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout_dialog_top_sheet_bottom_normal_chat"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/layout_dialog_top_sheet_bottom_open_chat"
@@ -69,12 +69,13 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:text="일반 채팅"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout_dialog_top_sheet_bottom_open_chat"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/layout_dialog_top_sheet_bottom_normal_chat"
@@ -95,6 +96,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:text="오픈 채팅"/>
 
 
