--- a/app/src/main/res/layout/item_right_start_text_chat_room.xml
+++ b/app/src/main/res/layout/item_right_start_text_chat_room.xml
@@ -24,7 +24,7 @@
             tools:text="2"
             android:textColor="@color/flame_blue"
             android:textSize="7dp"
-            app:layout_constraintBottom_toTopOf="@id/tv_chat_list_date"
+            app:layout_constraintBottom_toTopOf="@id/tv_chat_room_list_date"
             android:layout_marginBottom="2dp"
             android:layout_marginRight="2dp"
             app:layout_constraintEnd_toStartOf="@id/layout_chat_room_message_space"
@@ -32,7 +32,7 @@
 
 
         <TextView
-            android:id="@+id/tv_chat_list_date"
+            android:id="@+id/tv_chat_room_list_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
