Add: Friend UI Friend 탭의 UI 구현

--- a/app/src/main/res/layout/ab_main.xml
+++ b/app/src/main/res/layout/ab_main.xml
@@ -32,6 +32,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="10dp"
+        android:padding="5dp"
         android:src="@drawable/ic_add_person_blue_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/img_appbar_setting"
@@ -42,6 +43,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="10dp"
+        android:padding="5dp"
         android:src="@drawable/ic_chatting"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,7 +54,8 @@
         android:id="@+id/img_appbar_setting"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="10dp"
+        android:padding="5dp"
         android:src="@drawable/settings_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
