--- a/app/src/main/res/layout/item_friend_preview.xml
+++ b/app/src/main/res/layout/item_friend_preview.xml
@@ -9,48 +9,58 @@
         android:id="@+id/img_friend_preview"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/bg_skyblue_30"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_friend_preview_none"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/bg_pink_30"
+        android:src="@drawable/ic_smile_white_24"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_friend_preview_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:text="친구의 생일을 확인해보세요!"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tv_friend_preview_desc"
         app:layout_constraintStart_toEndOf="@+id/img_friend_preview"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="이름" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_friend_preview_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
+        android:textSize="13sp"
         android:textStyle="bold"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_friend_preview_nickname"
         app:layout_constraintTop_toBottomOf="@+id/tv_friend_preview_nickname"
-        tools:text="싱태메세지" />
+        tools:text="상태메세지" />
 
     <TextView
         android:id="@+id/tv_friend_preview_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:drawableRight="@drawable/ic_right_arrow_black_24"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_friend_preview_nickname"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_friend_preview_nickname"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
