--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -45,9 +45,27 @@
             android:id="@+id/action_friend_to_chat_list"
             app:destination="@id/navigation_chat_list"
             app:popUpTo="@id/navigation_chat_list" />
+        <action
+            android:id="@+id/action_friend_to_profile"
+            app:destination="@id/navigation_profile" />
     </fragment>
 
-<!--    채팅방 리스트-->
+    <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.sgs.devcamp2.flametalk_android.ui.profile.ProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/fragment_profile">
+        <argument
+            android:name="userId"
+            android:defaultValue="-1"
+            app:argType="integer" />
+        <argument
+            android:name="viewType"
+            android:defaultValue="1"
+            app:argType="integer" />
+    </fragment>
+
+    <!--    채팅방 리스트-->
     <fragment
         android:id="@+id/navigation_chat_room_list"
         android:name="com.sgs.devcamp2.flametalk_android.ui.chatroomlist.ChatRoomListFragment"
@@ -62,27 +80,24 @@
         android:id="@+id/navigation_setting"
         android:name="com.sgs.devcamp2.flametalk_android.ui.setting.SettingFragment"
         android:label="Setting"
-        tools:layout="@layout/fragment_setting">
-    </fragment>
-
+        tools:layout="@layout/fragment_setting"></fragment>
 
 
     <fragment
         android:id="@+id/navigation_oauth"
         android:name="com.sgs.devcamp2.flametalk_android.ui.oauth.OAuthFragment"
         android:label="OAuth"
-        tools:layout="@layout/fragment_o_auth"
-        >
+        tools:layout="@layout/fragment_o_auth">
         <action
             android:id="@+id/action_chat_to_post"
             app:destination="@id/navigation_chat_room_list"
-            app:popUpTo="@id/navigation_chat_room_list"/>
+            app:popUpTo="@id/navigation_chat_room_list" />
     </fragment>
     <fragment
         android:id="@+id/navigation_chat_room"
         android:name="com.sgs.devcamp2.flametalk_android.ui.chatroom.ChatRoomFragment"
         android:label="fragment_chat_room"
-        tools:layout="@layout/fragment_chat_room" >
+        tools:layout="@layout/fragment_chat_room">
         <action
             android:id="@+id/action_chatRoomFragment_to_navigation_oauth"
             app:destination="@id/navigation_oauth" />
@@ -91,7 +106,7 @@
         android:id="@+id/inviteRoomFragment"
         android:name="com.sgs.devcamp2.flametalk_android.ui.inviteroom.InviteRoomFragment"
         android:label="fragment_invite_room"
-        tools:layout="@layout/fragment_invite_room" >
+        tools:layout="@layout/fragment_invite_room">
         <action
             android:id="@+id/action_inviteRoomFragment_to_navigation_chat_room_list2"
             app:destination="@id/navigation_chat_room_list" />
@@ -99,7 +114,7 @@
     <fragment
         android:id="@+id/chatRoomTopSheetFragment"
         android:name="com.sgs.devcamp2.flametalk_android.ui.chatroomlist.ChatRoomTopSheetFragment"
-        android:label="ChatRoomTopSheetFragment" >
+        android:label="ChatRoomTopSheetFragment">
         <action
             android:id="@+id/action_chatRoomTopSheetFragment_to_inviteRoomFragment"
             app:destination="@id/inviteRoomFragment" />
