--- a/app/src/main/res/layout/fragment_invite_room.xml
+++ b/app/src/main/res/layout/fragment_invite_room.xml
@@ -70,7 +70,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_invite_room_selected"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:visibility="gone"
