--- a/app/src/main/res/drawable/selector_bookmark.xml
+++ b/app/src/main/res/drawable/selector_bookmark.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_star_white_24" android:state_checked="true" />
+    <!--<item android:drawable="@drawable/ic_star_white_24" android:state_checked="true" />
     <item android:drawable="@drawable/ic_star_stroke_white_24" android:state_checked="false" />
+-->
+
+    <item android:drawable="@drawable/ic_star_white_24" android:state_activated="true" />
+    <item android:drawable="@drawable/ic_star_stroke_white_24" android:state_activated="false" />
 </selector>
