Update: FriendFragment에서 친구 프로필 상세보기 연결
생일인 친구, 일반 친구 recyclerview 아이템을 클릭하면 프로필 상세 페이지로 이동

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -56,13 +56,12 @@
         android:label="Profile"
         tools:layout="@layout/fragment_profile">
         <argument
-            android:name="userId"
-            android:defaultValue="-1"
-            app:argType="integer" />
-        <argument
             android:name="viewType"
             android:defaultValue="1"
             app:argType="integer" />
+        <argument
+            android:name="userInfo"
+            app:argType="com.sgs.devcamp2.flametalk_android.network.response.friend.ProfilePreview" />
     </fragment>
 
     <!--    채팅방 리스트-->
