--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
 
     <color name="flame_blue">#0884f6</color>
     <color name="flame_sky_blue">#B0D9FF</color>
+    <color name="flame_sky_blue2">#A3D3FF</color>
     <color name="flame_pink">#FF82AD</color>
 
 
