Add: EditProfile, EditProfileDesc
프로필 편집, 상태메세지 편집 기능 구현
fragment간 데이터의 직접 전달을 최소화하고 ViewModel을 공유하여 데이터 update

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,5 @@
     <color name="flame_sky_blue2">#A3D3FF</color>
     <color name="flame_pink">#FF82AD</color>
 
-
-
+    <color name="gray_transparent">#6F000000</color>
 </resources>
