--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -50,6 +50,7 @@
             app:destination="@id/navigation_profile" />
     </fragment>
 
+    <!--프로필 상세보기-->
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.sgs.devcamp2.flametalk_android.ui.profile.ProfileFragment"
@@ -62,6 +63,41 @@
         <argument
             android:name="userInfo"
             app:argType="com.sgs.devcamp2.flametalk_android.network.response.friend.ProfilePreview" />
+        <action
+            android:id="@+id/action_profile_to_edit"
+            app:destination="@id/navigation_edit_profile" />
+    </fragment>
+
+    <!--프로필 편집-->
+    <fragment
+        android:id="@+id/navigation_edit_profile"
+        android:name="com.sgs.devcamp2.flametalk_android.ui.profile.edit.EditProfileFragment"
+        android:label="EditProfile"
+        tools:layout="@layout/fragment_edit_profile">
+
+        <action
+            android:id="@+id/action_profile_to_edit_desc"
+            app:destination="@id/navigation_edit_profile_desc" />
+        <argument
+            android:name="userInfo"
+            app:nullable="true"
+            android:defaultValue="@null"
+            app:argType="com.sgs.devcamp2.flametalk_android.network.response.friend.ProfilePreview" />
+    </fragment>
+
+    <!--상태메세지 수정-->
+    <fragment
+        android:id="@+id/navigation_edit_profile_desc"
+        android:name="com.sgs.devcamp2.flametalk_android.ui.profile.edit.EditProfileDescFragment"
+        android:label="EditDescProfile"
+        tools:layout="@layout/fragment_edit_desc">
+
+        <argument
+            android:name="desc"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_edit_desc_to_edit"
+            app:destination="@id/navigation_edit_profile" />
     </fragment>
 
     <!--    채팅방 리스트-->
