Add: EditProfile, EditProfileDesc
프로필 편집, 상태메세지 편집 기능 구현
fragment간 데이터의 직접 전달을 최소화하고 ViewModel을 공유하여 데이터 update

--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -104,5 +104,15 @@
         app:layout_constraintStart_toStartOf="@id/tv_edit_profile_desc"
         app:layout_constraintTop_toBottomOf="@id/tv_edit_profile_desc" />
 
+    <ImageView
+        android:id="@+id/img_edit_profile_gallery_bg"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/bg_white_15"
+        android:foreground="@drawable/ic_camera_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
