Add : websocket kcrossbow library
develop merge 전 dependency 정리

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/navigation_additional_user_info">
+    app:startDestination="@id/navigation_friend">
 
     <fragment
         android:id="@+id/navigation_signin"
