--- a/app/src/main/res/layout/fragment_open_chat_room.xml
+++ b/app/src/main/res/layout/fragment_open_chat_room.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.openchatroom.OpenChatRoomFragment">
+    tools:context=".ui.openchatroom.OpenChaRoomFragment">
 
     <include
         android:id="@+id/ab_open_chat_room"
@@ -32,7 +32,7 @@
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vp_open_chat_room"
+        android:id="@+id/rv_open_chat_room_inner"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:layout_constraintTop_toBottomOf="@id/tbl_open_chat_room"/>
@@ -41,7 +41,7 @@
         android:id="@+id/rv_open_chat_room"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/vp_open_chat_room"
+        app:layout_constraintTop_toBottomOf="@id/rv_open_chat_room_inner"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/item_open_chat_room"/>
 
