--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
         <item name="android:windowMinWidthMinor">100%</item>
     </style>
 
+    <!--스위치 커스텀-->
+    <style name="CustomSwitch">
+        <item name="colorControlActivated">@color/flame_blue</item>
+        <item name="colorSwitchThumbNormal">@color/white</item>
+    </style>
+
 </resources>
