--- a/app/src/main/res/layout/item_setting.xml
+++ b/app/src/main/res/layout/item_setting.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
+    android:minHeight="55dp">
 
     <TextView
         android:id="@+id/tv_setting_title"
@@ -27,7 +27,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:textSize="12sp"
-        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,4 +60,4 @@
         android:layout_height="1dp"
         android:background="@color/light_gray"
         app:layout_constraintBottom_toBottomOf="parent" />
-</merge>
+</androidx.constraintlayout.widget.ConstraintLayout>
