Add: di Module with hit from chatRoomList
chatRoomList에 di 적용

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="design_tab_text_size_2line" tools:overide="true">20sp</dimen>
 </resources>
