--- a/app/src/main/res/layout/fragment_open_chat_room.xml
+++ b/app/src/main/res/layout/fragment_open_chat_room.xml
@@ -3,46 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.openchatroom.OpenChaRoomFragment">
+    android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/ab_open_chat_room"
-        layout="@layout/ab_main"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tbl_open_chat_room"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabTextColor="@color/middle_gray"
         app:tabIndicatorColor="@color/black"
         app:tabSelectedTextColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/ab_open_chat_room">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tabTextColor="@color/middle_gray">
+
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="오픈채팅"/>
+            android:text="오픈채팅" />
+
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="오픈프로필"/>
+            android:text="오픈프로필" />
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/rv_open_chat_room_inner"
+        android:id="@+id/vp_open_chat_room_inner"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@id/tbl_open_chat_room"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tbl_open_chat_room" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_open_chat_room"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/rv_open_chat_room_inner"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_open_chat_room"/>
+        app:layout_constraintTop_toBottomOf="@id/vp_open_chat_room_inner"
+        tools:listitem="@layout/item_open_chat_room" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
