--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,17 @@
         <item name="android:windowMinWidthMinor">100%</item>
     </style>
 
+    <style name="tab_layout" parent="Widget.Design.TabLayout">
+        <item name="tabSelectedTextColor">#1268F3</item>
+        <item name="tabTextColor">@color/gray</item>
+        <item name="tabTextAppearance">@style/tab_text</item>
+    </style>
+    <style name="tab_text" parent = "TextAppearance.Design.Tab">
+        <item name ="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+
 </resources>
