--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -155,12 +155,15 @@
         tools:layout="@layout/fragment_invite_room">
         <action
             android:id="@+id/action_inviteRoomFragment_to_navigation_chat_room_Fragment"
-            app:destination="@id/navigation_chat_room" />
+            app:destination="@id/navigation_chat_room"
+            app:popUpTo="@id/navigation_invite_room"
+            app:popUpToInclusive="true"/>
     </fragment>
     <dialog
         android:id="@+id/navigation_chat_Room_Top_Sheet"
         android:name="com.sgs.devcamp2.flametalk_android.ui.chatroomlist.ChatRoomTopSheetFragment"
-        android:label="fragment_chat_room_top_sheet" >
+        android:label="fragment_chat_room_top_sheet"
+        tools:layout="@layout/fragment_chat_room_list_top_sheet">
         <action
             android:id="@+id/action_chatRoomTopSheetFragment_to_inviteRoomFragment"
             app:destination="@id/navigation_invite_room" />
@@ -193,6 +196,9 @@
         <action
             android:id="@+id/action_chattingViewPagerFragment2_to_navigation_open_chat_room"
             app:destination="@id/navigation_open_chat_room" />
+        <action
+            android:id="@+id/action_navigation_chatting_ViewPager_Fragment_to_navigation_chat_Room_Top_Sheet"
+            app:destination="@id/navigation_chat_Room_Top_Sheet" />
     </fragment>
 
 
